--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta
       name="keywords"
       content="민구홍 매뉴팩처링, Min Guhong Manufacturing, Min Guhong Mfg." />
-    <meta itemprop="name" content="자주 하는 질문 – 민구홍 매뉴팩처링" />
+    <meta itemprop="name" content="자주 하는 질문의 사본" />
     <meta
       itemprop="description"
       content="그래픽 디자인 스튜디오 겸 출판사 워크룸을 거쳐 안그라픽스의 독립 사업부 안그라픽스 랩에 기생하는 1인 회사" />
@@ -19,7 +19,7 @@
       content="https://minguhongmfg.com/media/pages/faq/ef4837c463-1658806901/fuchsine-mouse-pad-1200x630-crop.jpg" />
     <meta property="og:url" content="https://minguhongmfg.com/faq" />
     <meta property="og:type" content="website" />
-    <meta property="og:title" content="자주 하는 질문 – 민구홍 매뉴팩처링" />
+    <meta property="og:title" content="자주 하는 질문의 사본" />
     <meta
       property="og:description"
       content="그래픽 디자인 스튜디오 겸 출판사 워크룸을 거쳐 안그라픽스의 독립 사업부 안그라픽스 랩에 기생하는 1인 회사" />
@@ -27,7 +27,7 @@
       property="og:image"
       content="https://minguhongmfg.com/media/pages/faq/dcd972d4d7-1658806918/the-first-website-1200x630-crop.png" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="자주 하는 질문 – 민구홍 매뉴팩처링" />
+    <meta name="twitter:title" content="자주 하는 질문의 사본" />
     <meta
       name="twitter:description"
       content="그래픽 디자인 스튜디오 겸 출판사 워크룸을 거쳐 안그라픽스의 독립 사업부 안그라픽스 랩에 기생하는 1인 회사" />
