--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>자주 하는 질문 – 민구홍 매뉴팩처링</title>
+    <title>자주 하는 질문의 사본</title>
     <meta
       name="description"
       content="그래픽 디자인 스튜디오 겸 출판사 워크룸을 거쳐 안그라픽스의 독립 사업부 안그라픽스 랩에 기생하는 1인 회사" />
