--- a/index.html
+++ b/index.html
@@ -77,9 +77,7 @@
     <link
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
       rel="stylesheet" />
-    <link
-      href="https://minguhongmfg.com/assets/css/style.css?v=1698284246"
-      rel="stylesheet" />
+    <link href="style.css" rel="stylesheet" />
   </head>
   <body id="faq" ontouchstart="" data-text="괜찮습니다. 잠시만 기다려주세요…">
     <nav class="nav">
