--- a/index.html
+++ b/index.html
@@ -410,16 +410,17 @@
         </div>
       </dl>
       <p class="note">
-        이 웹사이트는
-        <a href="https://minguhongmfg.com/faq">https://minguhongmfg.com/faq</a
-        >의 소스코드를 훔쳐왔습니다. 그리고 텍스트 프롬프트를 음악으로 바꿔주는
-        음악 생성형 AI Muvert에게 음악을 만들어줄 것을 요청했습니다.
+        위는 WMDYWTL?을 위해 민구홍 님과 진행한 인터뷰 전문입니다. 그리고 텍스트
+        프롬프트를 음악으로 바꿔주는 음악 생성형 AI Muvert에게 음악을 만들어줄
+        것을 요청했습니다.
       </p>
     </section>
 
     <footer class="footer">
       <p>
-        아래는 WMDYWTL?을 위해 민구홍 님과 진행한 인터뷰 전문입니다.
+        이 웹사이트는
+        <a href="https://minguhongmfg.com/faq">https://minguhongmfg.com/faq</a
+        >의 소스코드를 훔쳐왔습니다.
         <br />
         <audio autoplay loop controls>
           <source src="assets/audio.mp3" type="audio/mp3" />
